--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,7 @@
 body {
   background-color: var(--white-color);
   color: var(--primary-text-color);
-
   font-family: Roboto, sans-serif;
-  letter-spacing: 0.02em;
-  font-size: 16px;
-  line-height: 1.5;
 }
 .list {
   list-style: none;
@@ -31,12 +27,14 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.3;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
-.logo-right {
-  color: var(--blue-color);
-}
-.logo.light-theme > .logo-right {
+.logo.light > .logo-right {
   color: var(--white-color);
+}
+.logo.dark > .logo-right {
+  color: var(--blue-color);
 }
 
 /*📌=== site-nav */
@@ -54,6 +52,9 @@ body {
 
 .contacts-link {
   color: var(--primary-text-color);
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .contacts-link:hover,
 .contacts-link:focus {
@@ -71,6 +72,7 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 .hero-button {
   background-color: var(--accent-color);
@@ -78,6 +80,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 
 .hero-button:hover,
@@ -90,17 +93,22 @@ body {
   color: var(--blue-color);
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.advantages-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /* 📌 ===work examples */
 
 .section-title {
   color: var(--blue-color);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   text-align: center;
+  letter-spacing: 0.02em;
 }
 
 /* 📌 === Our Team */
@@ -110,6 +118,13 @@ body {
 }
 .staff-title {
   color: var(--blue-color);
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+}
+.staff-position {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /* 📌 === footer  */
@@ -120,6 +135,8 @@ body {
 
 .logo-group > .text {
   color: var(--secondary-text-color);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /*============ second page */
@@ -128,8 +145,9 @@ body {
   color: #4d5ae5;
 
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
+  font-weight: 500;
+  letter-spacing: 0.04em;
 }
 .section-button:hover,
 .section-button:focus {
@@ -141,8 +159,10 @@ body {
   color: var(--blue-color);
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .projects-description {
   color: var(--primary-text-color);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
