--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
 }
+
+/* 📌 Utils */
+
 .list {
   list-style: none;
 }
@@ -23,12 +26,25 @@ body {
 .button {
   cursor: pointer;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 /* 📌===logo */
 
 .logo {
   color: var(--accent-color);
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.3;
@@ -46,6 +62,11 @@ body {
 
 .site-nav .link {
   color: var(--blue-color);
+  font-weight: 500;
+  /* ??? */
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .site-nav .link:hover,
 .site-nav .link:focus,
@@ -58,6 +79,8 @@ body {
 .contacts-link {
   color: var(--primary-text-color);
   font-style: normal;
+  /* ??? */
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -81,6 +104,7 @@ body {
 }
 .hero-button {
   background-color: var(--accent-color);
+  font-family: inherit;
   color: var(--white-color);
   font-weight: 500;
   font-size: 16px;
@@ -101,6 +125,8 @@ body {
   letter-spacing: 0.02em;
 }
 .advantages-text {
+  /* ??? */
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -126,8 +152,12 @@ body {
   font-weight: 500;
   font-size: 20px;
   letter-spacing: 0.02em;
+  /* ??? */
+  line-height: 1.2;
 }
 .staff-position {
+  /* ??? */
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -147,8 +177,9 @@ body {
 /*============ second page */
 .filter-button {
   background: #f4f4fd;
-  color: #4d5ae5;
 
+  font-family: inherit;
+  color: #4d5ae5;
   line-height: 1.5;
   font-weight: 500;
   letter-spacing: 0.04em;
@@ -164,6 +195,8 @@ body {
   font-weight: 500;
   font-size: 20px;
   letter-spacing: 0.02em;
+  /* ??? */
+  line-height: 1.2;
 }
 .projects-description {
   color: var(--primary-text-color);
